--- a/src/app/tasks/tasks.component.css
+++ b/src/app/tasks/tasks.component.css
@@ -6,3 +6,12 @@ h1 {
 form {
     padding-block-end: 20px;
 }
+
+form button {
+    margin-top: 30px;
+}
+
+table button {
+    border-radius: 20px;
+    cursor: pointer;
+}
